src/component/components.css
.Logo {
  width: 300px;
  margin-left: 15px;
  margin-top: 8px;
}

ul {
  list-style-type: none;
}

.LinkDiv li {
  display: inline;
  margin-right: 60px;
}

li a {
  text-decoration: none;
  color: #000;
}

.Links {
  float: right;
  margin-top: 60px;
  margin-right: 300px;
}

.Links ul li {
  color: rgba(255, 255, 255, 0.884);
  margin-bottom: 25px;
}

.LogoDiv {
  display: inline-block;
}

.LinkDiv {
  float: right;
  margin-top: 10px;
}

.BookingButton {
  border: solid 2px gray;
  padding: 5px 20px 5px 20px;
}

.BookingButtonDark {
  border: solid 2px gray;
  padding: 5px 20px 5px 20px;
  color: rgba(255, 255, 255, 0.884);
  margin-left: 10px;
  width: 140px;
}

.Salon {
  width: 100%;
  margin-bottom: 100px;
  margin-top: 5px;
}

.FooterDiv {
  background-color: black;
  height: 350px;
  margin-top: 80px;
}

.FooterLogo {
  width: 350px;
  margin-left: 30px;
}

.FooterLeft {
  display: inline-block;
}

h5 {
  color: rgba(255, 255, 255, 0.884);
  margin-left: 50px;
  margin-bottom: 30px;
}

.item {
  max-height: 21rem;
  min-width: 17.3rem;
  padding: 35px;
}

.item img {
  width: 100%;
  height: 100%;
  pointer-events: none;
  border-radius: 2em;
}

.inner-carousel {
  display: flex;
}

.carousel {
  cursor: grab;
  overflow: hidden;
  margin-bottom: 150px;
}

.ServicesHome {
    text-align: center;
}

.ServicesHome img {
    width: 6em;
    padding: 10px 80px 10px 80px;
    margin-top: 50px;
}

.ServicesHome div {
    display: inline-block;
}

.ServicesHome h1 {
    font-weight: 500;
}
.ServicesHome h2 {
    font-weight: 300;
}

.ServicesHome ul  {
    padding: 0;
    margin-top: 50px;
    
}

.ServicesHome li {
    width: 10em;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.OurCrew {
    text-align: center;
    margin-top: 200px;
}

.OurCrew h1 {
    font-weight: 500;
}
.OurCrew h2 {
    font-weight: 300;
}

.OurCrew div {
    display: inline-block;
}

.OurCrew img {
    width: 17em;
    margin-top: 50px;
    border-radius: 2em;
    margin: 100px 100px 10px 100px;
}

@media only screen and (max-width: 600px) {
    .Logo {
        width: 300px;
        margin-left: 0;
      }
}

